--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "components/Mongoose/mongoose"]
-	path = components/Mongoose/mongoose
+[submodule "components/Mongoose/lib/mongoose"]
+	path = components/Mongoose/lib/mongoose
 	url = https://github.com/cesanta/mongoose.git
+[submodule "components/Mongoose/lib/mongoose-os"]
+	path = components/Mongoose/lib/mongoose-os
+	url = https://github.com/cesanta/mongoose-os.git
