--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/Mongoose/lib/mongoose-os"]
 	path = components/Mongoose/lib/mongoose-os
 	url = https://github.com/cesanta/mongoose-os.git
+[submodule "components/QRCode/QR-Code-generator"]
+	path = components/QRCode/QR-Code-generator
+	url = https://github.com/nayuki/QR-Code-generator.git
